--- a/package.json
+++ b/package.json
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@langchain/core": "^0.2.14",
+    "@langchain/openai": "^0.2.1",
+    "@langchain/pinecone": "^0.0.7",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.15.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "ai": "^3.2.17",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
+    "langchain": "^0.2.8",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
+    "openai": "^4.52.4",
+    "peggy": "^3.0.2",
+    "qrcode": "^1.5.3",
+    "qss": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-qrcode-logo": "^3.0.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
